--- a/src/TheWorld/project.json
+++ b/src/TheWorld/project.json
@@ -12,7 +12,8 @@
         "Microsoft.AspNet.StaticFiles": "1.0.0-rc1-final",
         "Microsoft.AspNet.Mvc.TagHelpers": "6.0.0-rc1-final",
         "Microsoft.Extensions.Configuration": "1.0.0-rc1-final",
-        "Microsoft.Extensions.PlatformAbstractions": "1.0.0-rc1-final"
+        "Microsoft.Extensions.PlatformAbstractions": "1.0.0-rc1-final",
+        "Microsoft.Extensions.Logging.Debug": "1.0.0-rc1-final"
     },
 
     "commands": {
