--- a/src/TheWorld/config.json
+++ b/src/TheWorld/config.json
@@ -1,6 +1,7 @@
 ﻿{
     "AppSettings": {
-        "SiteEmailAddress": "me@aol.com"
+        "SiteEmailAddress": "me@aol.com",
+        "BingKey": "DONTHARDCODEKEYSINCONFIGURATION"
     },
     "Data": {
         "WorldContextConnection": "Server=(localdb)\\mssqllocaldb;Database=PluralSight.AspNet5.TheWorldDB;Trusted_Connection=True;"
