--- a/src/TheWorld/project.json
+++ b/src/TheWorld/project.json
@@ -13,7 +13,8 @@
         "Microsoft.AspNet.Mvc.TagHelpers": "6.0.0-rc1-final",
         "Microsoft.Extensions.Configuration": "1.0.0-rc1-final",
         "Microsoft.Extensions.PlatformAbstractions": "1.0.0-rc1-final",
-        "Microsoft.Extensions.Logging.Debug": "1.0.0-rc1-final"
+        "Microsoft.Extensions.Logging.Debug": "1.0.0-rc1-final",
+        "AutoMapper": "4.0.4"
     },
 
     "commands": {
@@ -22,8 +23,16 @@
     },
 
   "frameworks": {
-    "dnx451": { },
-    "dnxcore50": { }
+    "dnx451": {
+        "dependencies": {
+            "System.Net.Http": "4.0.1-beta-23516"
+        }
+    },
+    "dnxcore50": {
+        "dependencies": {
+            "System.Net.Http": "4.0.1-beta-23516"
+        }
+    }
   },
 
   "exclude": [
